# pinboard-mcp

./: .gitignore  CLAUDE.md  Dockerfile  PRD.md  README.md  build.sh  pyproject.toml
.github/workflows/: docker-publish.yml
knowledge/: fastmcp.md  pinboard.md
src/pinboard_mcp/: __init__.py  pinboard.py  server.py  utils.py
